# usdc-tracker

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  nginx.conf  schema.sql
apps/tracker/: Cargo.toml
apps/tracker/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: errors.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20251028105558_init.sql
crates/db/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: fetchers.rs  lib.rs
nginx/: nginx.conf
pgdata/: postmaster.pid
pgdata/base/1/: 1247  1247_vm  1255  1255_vm  1259  1259_vm  13460  13465  2601_vm  2605_vm  2607_vm  2609_vm  2612  2615_vm  2618_vm  2619  2619_fsm  2619_vm  2673  2678  2696  2836_vm  2840  2840_vm  2841  3394_vm  3455  3600  3602  3603  pg_internal.init
pgdata/base/16384/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13460  13460_fsm  13460_vm  13464  13465  13465_fsm  13465_vm  13469  13470  13470_fsm  13470_vm  13474  13475  13475_fsm  13475_vm  13479  16385  16422  16423  16425  16479  16479_vm  16480  16481  16481_fsm  16481_vm  (+217 more)
pgdata/base/4/: 1249_vm  1259  13460_vm  13465_vm  13470_vm  2606  2608  2610  2615  2616_vm  2617_vm  2618  2619_vm  2663  2674  2696  2753_vm  2836  2840  2841  3079  3079_vm  3394  3456  3456_vm  3602_vm  3603_vm  3764  3764_vm
pgdata/base/5/: 1249  1259  13470  (+21 more)
pgdata/global/: 1213_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  pg_control  pg_internal.init
pgdata/init/: schema.sql
pgdata/pg_stat/: pgstat.stat
pgdata/pg_xact/: 0000
src/: api.rs  db.rs  main.rs  take_transactions.rs
