[package]
name = "usdc-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.47.1", features = ["full"] }
ethers = { version = "2.0.14", features = ["abigen", "rustls", "ws"] }
dotenv = "0.15.0"
anyhow = "1.0.100"
rust_decimal = "1.38.0"
serde_json = "1.0.145"
chrono = "0.4.42"