[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "rust_decimal", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.38.0"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
