[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
ethers = { version = "2.0.14", features = ["abigen", "rustls", "ws"] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
chrono = "0.4.42"
dotenv = "0.15.0"
rust_decimal = "1.38.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "rust_decimal"] }
common = { path = "../common" }
